@@ -15,12 +15,12 @@ SUFFIXES =  .xml .3
 DEFS = @WCHAR_T_DEF@
 INCLUDES = -I.. -I. @TCL_FLAGS@ -I../Utility -I../NSCLException @XINCLUDES@
 LDADD = -ltclPlus -lException -lXt -lX11 $(X11EXTRA_LDFLAGS) -L. @TCL_LDFLAGS@
-# AM_LDFLAGS = -L. @TCL_LDFLAGS@
+
 
 lib_LTLIBRARIES = libtclPlus.la
 
 libtclPlus_la_LDFLAGS = -version-info $(SOVERSION):0 \
-	-Wl,"-rpath-link=$(libdir)"
+	-Wl,"-rpath-link=$(libdir)" @TCL_LDFLAGS@
 
 testableSources = TCLInterpreter.cpp TCLProcessor.cpp  \
 	TCLVariable.cpp TCLString.cpp  \
@@ -108,7 +108,7 @@ tracetests_SOURCES = TestRunner.cpp \
 tracetests_DEPENDENCIES = $(testableObjects)
 
 TestLdflags = $(testableObjects) $(CPPUNIT_LDFLAGS) $(X11EXTRA_LDFLAGS) \
-	-L@top_srcdir@/NSCLException -lException
+	-L@top_srcdir@/NSCLException -lException @TCL_LDFLAGS@
 
 
 tracetests_LDADD = $(TestLdflags)
