@@ -625,3 +625,4 @@ Week of April 30, 2007
           helper classes.
         - Added capability to add/remove observers from the spectrum dictionary
           to CHistogrammer.
+        - Added API entries to add/remove spectrum observers.
